Fixed Styling alignment

--- a/Application/client/src/App.css
+++ b/Application/client/src/App.css
@@ -1,36 +1,36 @@
 .App {
-    text-align: center;
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-.container{
-  margin-left: 5rem;
+  text-align: center;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.container {
   padding: 1rem;
+  width: 100vw;
+  margin: 0;
+  margin-left: 20rem;
 }
 
-.bluetoothConnect{
-  flex:4;
+.bluetoothConnect {
+  flex: 4;
 }
-
 
 .App::-webkit-scrollbar {
   width: 0.25rem;
 }
 
 .App::-webkit-scrollbar-track {
-  background: #1e1e24
+  background: #1e1e24;
 }
 
 .App::-webkit-scrollbar-thumb {
-  background: #6649b8
+  background: #6649b8;
 }
-
