--- a/Application/client/src/components/styles.css
+++ b/Application/client/src/components/styles.css
@@ -157,7 +157,7 @@ main {
   justify-content: center;
   align-items: center;
   margin-top: 20vh;
-  margin-left: 15vw;
+  margin-left: 5vw;
   padding: 20px;
   cursor: pointer;
   height: 150px;
